migration to io.fabric8:docker-maven-plugin

--- a/PetClinic-Backend/pom.xml
+++ b/PetClinic-Backend/pom.xml
@@ -27,11 +27,9 @@
             </plugin>
 
             <plugin>
-                <groupId>com.spotify</groupId>
+                <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.4.13</version>
-
-                <!-- http://filippodeluca.com/programming/2015/02/17/docker-maven-plugin -->
+                <version>0.20.1</version>
                 <executions>
                     <execution>
                         <id>build-docker-image</id>
@@ -39,17 +37,19 @@
                         <goals>
                             <goal>build</goal>
                         </goals>
-
                         <configuration>
-                            <imageName>bmoussaud/petclinic-backend</imageName>
-                            <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
-                            <resources>
-                                <resource>
-                                    <targetPath>/</targetPath>
-                                    <directory>${project.build.directory}</directory>
-                                    <include>${project.build.finalName}.war</include>
-                                </resource>
-                            </resources>
+                            <images>
+                                <image>
+                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                                    <registry>192.168.99.100:5000/bmoussaud/petclinic-backend</registry>
+                                    <build>
+                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                                        <assembly>
+                                            <descriptorRef>rootWar</descriptorRef>
+                                        </assembly>
+                                    </build>
+                                </image>
+                            </images>
                         </configuration>
                     </execution>
 
@@ -57,37 +57,47 @@
                         <id>push-docker-image</id>
                         <phase>install</phase>
                         <goals>
-                            <goal>tag</goal>
+                            <goal>push</goal>
                         </goals>
-
                         <configuration>
-                            <image>bmoussaud/petclinic-backend</image>
-                            <newName>localhost:5000/bmoussaud/petclinic-backend:${petclinic-backend.image.version}</newName>
-                            <pushImage>true</pushImage>
-                            <!-- We are also pushing this time -->
-                            <tagInfoFile>${project.build.directory}/docker_image_info.json</tagInfoFile>
+                            <images>
+                                <image>
+                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                                    <registry>192.168.99.100:5000</registry>
+                                    <build>
+                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                                        <assembly>
+                                            <descriptorRef>rootWar</descriptorRef>
+                                        </assembly>
+                                    </build>
+                                </image>
+                            </images>
                         </configuration>
                     </execution>
-
 
                     <execution>
-                        <id>push-image-to-docker-hub</id>
-                        <phase>deploy</phase>
+                        <id>push-docker-hub</id>
+                        <phase>install</phase>
                         <goals>
-                            <goal>tag</goal>
+                            <goal>push</goal>
                         </goals>
+
                         <configuration>
-                            <image>bmoussaud/petclinic-backend</image>
-                            <newName>docker.io/bmoussaud/petclinic-backend:${petclinic-backend.image.version}</newName>
-                            <serverId>docker-hub</serverId>
-                            <pushImage>true</pushImage>
+                            <images>
+                                <image>
+                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                                    <build>
+                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                                        <assembly>
+                                            <descriptorRef>rootWar</descriptorRef>
+                                        </assembly>
+                                    </build>
+                                </image>
+                            </images>
                         </configuration>
                     </execution>
-
                 </executions>
-
             </plugin>
-
 
         </plugins>
     </build>
