--- a/PetClinic/src/main/docker/Dockerfile
+++ b/PetClinic/src/main/docker/Dockerfile
@@ -5,6 +5,6 @@ COPY petclinic.xml  /usr/local/tomcat/conf/Catalina/localhost/petclinic.xml
 ENV JAVA_OPTS -Xmx512m -Djava.security.egd=file:/dev/./urandom
 COPY catalina.properties /usr/local/tomcat/conf/catalina.properties
 
-COPY PetClinic.war /usr/local/tomcat/webapps/petclinic.war
+COPY maven/ROOT.war /usr/local/tomcat/webapps/petclinic.war
 
 CMD ["catalina.sh", "run"]
