configure maven build to use docker-machine

--- a/PetClinic-Backend/pom.xml
+++ b/PetClinic-Backend/pom.xml
@@ -1,120 +1,126 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.xebialabs.xldeploy.demos</groupId>
-        <artifactId>xldeploy-petdocker-parent</artifactId>
-        <version>1.0</version>
-    </parent>
-    <artifactId>PetClinic-Backend</artifactId>
-    <version>1.2</version>
-    <packaging>war</packaging>
-    <name>PetClinic-Backend Docker Webapp</name>
-    <url>http://maven.apache.org</url>
-    <build>
-        <finalName>PetClinic-Backend</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
-                <configuration>
-                    <archive>
-                        <addMavenDescriptor>false</addMavenDescriptor>
-                    </archive>
-                </configuration>
-            </plugin>
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.xebialabs.xldeploy.demos</groupId>
+    <artifactId>xldeploy-petdocker-parent</artifactId>
+    <version>1.0</version>
+  </parent>
+  <artifactId>PetClinic-Backend</artifactId>
+  <version>1.2</version>
+  <packaging>war</packaging>
+  <name>PetClinic-Backend Docker Webapp</name>
+  <url>http://maven.apache.org</url>
+  <build>
+    <finalName>PetClinic-Backend</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.1.1</version>
+        <configuration>
+          <archive>
+            <addMavenDescriptor>false</addMavenDescriptor>
+          </archive>
+        </configuration>
+      </plugin>
 
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.20.1</version>
-                <executions>
-                    <execution>
-                        <id>build-docker-image</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                        <configuration>
-                            <images>
-                                <image>
-                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
-                                    <registry>192.168.99.100:5000/bmoussaud/petclinic-backend</registry>
-                                    <build>
-                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-                                        <assembly>
-                                            <descriptorRef>rootWar</descriptorRef>
-                                        </assembly>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
-                    </execution>
+      <plugin>
+        <groupId>io.fabric8</groupId>
+        <artifactId>docker-maven-plugin</artifactId>
+        <version>0.20.1</version>
+        <executions>
+          <execution>
+            <id>build-docker-image</id>
+            <phase>package</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <machine>
+                <name>registry-virtualbox-1</name>
+              </machine>
+              <images>
+                <image>
+                  <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                  <registry>192.168.99.100:5000/bmoussaud/petclinic-backend</registry>
+                  <build>
+                    <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                    <assembly>
+                      <descriptorRef>rootWar</descriptorRef>
+                    </assembly>
+                  </build>
+                </image>
+              </images>
+            </configuration>
+          </execution>
 
-                    <execution>
-                        <id>push-docker-image</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>push</goal>
-                        </goals>
-                        <configuration>
-                            <images>
-                                <image>
-                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
-                                    <registry>192.168.99.100:5000</registry>
-                                    <build>
-                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-                                        <assembly>
-                                            <descriptorRef>rootWar</descriptorRef>
-                                        </assembly>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
-                    </execution>
+          <execution>
+            <id>push-docker-image</id>
+            <phase>install</phase>
+            <goals>
+              <goal>push</goal>
+            </goals>
+            <configuration>
+              <machine>
+                <name>registry-virtualbox-1</name>
+              </machine>
+              <images>
+                <image>
+                  <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                  <registry>192.168.99.100:5000</registry>
+                  <build>
+                    <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                    <assembly>
+                      <descriptorRef>rootWar</descriptorRef>
+                    </assembly>
+                  </build>
+                </image>
+              </images>
+            </configuration>
+          </execution>
 
-                    <execution>
-                        <id>push-docker-hub</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>push</goal>
-                        </goals>
+          <execution>
+            <id>push-docker-hub</id>
+            <phase>install</phase>
+            <goals>
+              <goal>push</goal>
+            </goals>
 
-                        <configuration>
-                            <images>
-                                <image>
-                                    <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
-                                    <build>
-                                        <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
-                                        <assembly>
-                                            <descriptorRef>rootWar</descriptorRef>
-                                        </assembly>
-                                    </build>
-                                </image>
-                            </images>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            <configuration>
+              <images>
+                <image>
+                  <name>bmoussaud/petclinic-backend:${petclinic-backend.image.version}</name>
+                  <build>
+                    <dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
+                    <assembly>
+                      <descriptorRef>rootWar</descriptorRef>
+                    </assembly>
+                  </build>
+                </image>
+              </images>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
-    <distributionManagement>
-        <repository>
-            <id>dummy-ftp</id>
-            <url>file:/tmp</url>
-        </repository>
-    </distributionManagement>
+  <distributionManagement>
+    <repository>
+      <id>dummy-ftp</id>
+      <url>file:/tmp</url>
+    </repository>
+  </distributionManagement>
 </project>
