--- a/dar/pom.xml
+++ b/dar/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>xldeploy-petdocker-parent</artifactId>
         <version>1.0</version>
     </parent>
-    <artifactId>PetPortal</artifactId>
+    <artifactId>dar</artifactId>
     <packaging>dar</packaging>
     <version>3.1-SNAPSHOT</version>
     <name>PetClinic Docker XL Deploy DAR</name>
