set a different image per orchestrator

--- a/PetClinic-Backend/pom.xml
+++ b/PetClinic-Backend/pom.xml
@@ -84,7 +84,7 @@
 
                     <execution>
                         <id>push-docker-hub</id>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>push</goal>
                         </goals>
