--- a/PetClinic/pom.xml
+++ b/PetClinic/pom.xml
@@ -74,7 +74,7 @@
 
                     <execution>
                         <id>push-docker-hub</id>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>push</goal>
                         </goals>
